--- a/hero-conjurer/templates/class.html
+++ b/hero-conjurer/templates/class.html
@@ -1,114 +1,150 @@
-<div id='class-tab' class='fill'>
-    <ul id='HC-abilities'>
+<div id='class-tab' class='fill flex-tab'>
 
-        {{#with data.abilities as | ability |}}
-        {{#each ability}}
-        <li class='ability-entry large'>
-            <div class='ability-entry border'>
-                <h3 class='ability-score'>{{@key}}</h3>
-                <p class='ability-score'>{{this}}</p>
-            </div>
-        </li>
+    <h1 class='title'>Choose a class</h1>
+    
+    <ul id='HC-abilities' class='flex-row'>
+        {{#each data.abilities}}
+            <li class='ability-container large'>
+                <div class='ability-container border'>
+                    <h3 class='ability-score'>{{@key}}</h3>
+                    <p class='ability-score'>{{this}}</p>
+                </div>
+            </li>
         {{/each}}
-        {{/with}}
     </ul>
 
-    <h1 style='text-align: center;'>Choose a class</h1>
+    <div class='fill flex-row'>
+        <div class='choice-pane flex-column'>
 
-    <div class='choice-pane'>
-        {{!-- Select Class--}}
-        {{#with info.class as | class |}}
-        {{#each this}}
-        <div class='class-entry tooltip'>
-            <img style="box-shadow:{{this.border}};" class='load-template selector class-icon' name='class'
-                id='{{@key}}' src='{{this.img}}'>
-            <h3 class='subheader'>{{@key}}</h3>
-            <p class='tooltiptext'>{{stripHTML this.description}}</p>
+            {{!-- Select Class--}}
+            <div class='flex-row flex-wrap'>
+                {{#each info.class}}
+                    <div class='class-container tooltip'>
+                        <img style='box-shadow:{{this.border}};' class='load-template selector class-icon' name='class'
+                            id='{{@key}}' src='{{this.img}}'>
+                        <h3 class='subheader'>{{@key}}</h3>
+                        <p class='tooltiptext'>{{stripHTML this.description}}</p>
+                    </div>
+                {{/each}}
+            </div>
+
+            {{!-- Description --}}
+            {{#if data.class.name}}
+                <div>
+                    <h3 class='header'>{{data.class.description}}</h3>
+                </div>
+
+                <hr class='section-break'>
+
+                {{!-- Hit Die --}}
+
+                <div>
+                    <h3 class='header'>Hit Die: {{data.class.hit_dice}}</h3>
+                </div>
+
+                {{!-- Weapon Proficiencies --}}
+                <div>
+                    <h3 class='header'>Weapon Proficiencies</h3>
+                    <ul class='general-text' style='padding-left: 20%;'>
+                        {{#each data.class.data.weapon_prof}}
+                            <li>{{this}}</li>
+                        {{/each}}
+                    </ul>
+                </div>
+
+                {{!-- Armor Proficiencies --}}
+                <div>
+                    <h3 class='header'>Armor Proficiencies</h3>
+                    <ul class='general-text' style='padding-left: 20%;'>
+                        {{#each data.class.data.armor_prof}}
+                            <li>{{this}}</li>
+                        {{/each}}
+                    </ul>
+                </div>
+
+                <hr class='section-break'>
+
+                {{!-- Choose Skills --}}
+                <div>
+                    <h3 class='header'>Skills: {{data.class.data.num_skills}}</h3>
+                    <ul class='general-text' style='list-style: none;'>
+                        {{#each data.class.data.skills}}
+                            <li>
+                                <input type='checkbox' id='{{this}}' name='skill-choice' value='{{this}}'>
+                                <label for='{{this}}'>{{this}}</label>
+                            </li>
+                        {{/each}}
+                    </ul>
+                </div>
+
+                <hr class='section-break'>
+
+                {{!-- Class Features --}}
+                <div class='flex-column'>
+                    <h3 class='header'>Class Features</h3>
+                    <div class='flex-column'>
+                        {{#each data.class.feats as | feat |}}
+                            <div class='feat-container tooltip darken'>
+                                <img src='{{this.img}}' class='feat-icon'>
+                                <span class='subheader'>{{feat.name}}</span>
+                                <span class='tooltiptext'>{{stripHTML feat.data.description.value}}</span>
+                            </div>
+                            {{#if (lookup ../data.class.data.feat_choices @key) }}
+                                <div class='dropdown-container'>
+                                    <select class='dropdown general-text darken' name='feat'>
+                                        <option selected hidden disabled></option>
+                                        {{#each (lookup ../data.class.data.feat_choices @key)}}
+                                            <option value='{{@key}}'>{{@key}}</option>
+                                        {{/each}}
+                                    </select>
+                                </div>
+                            {{/if}}
+
+                        {{/each}}
+                    </div>
+                </div>
+
+                <hr class='section-break'>
+
+                {{#if data.class.extra_languages}}
+                    <div class='flex-column'>
+                        <h3 class='header'>Extra Languages: {{data.class.extra_languages}}</h3>
+
+                        <ul class='container' style='list-style: none; width: 80%;' name='class' id='extra-languages'>
+                            {{#range data.class.extra_languages}}
+                                <li class='general-text darken'>
+                                    <input type='text' placeholder='e.g, Draconic'>
+                                </li>
+                            {{/range}}
+                        </ul>
+                    </div>
+
+                    <hr class='section-break'>
+
+                {{/if}}
+
+                {{!-- Starting Equipment--}}
+                <div class='flex-column'>
+                    <h3 class='header'>Starting Equipment</h3>
+                    <ul class='general-text'>
+                        {{#each data.class.data.equipment}}
+                            <li>{{this}}</li>
+                        {{/each}}
+                    </ul>
+                </div>
+
+                <hr class='section-break'>
+
+            {{/if}}
         </div>
-        {{/each}}
-        {{/with}}
 
+        {{!-- Info Pane --}}
         {{#if data.class.name}}
-
-        <h3 class='header' style='margin: 5%;'>{{data.class.description}}</h3>
-
-        <hr class='section-break'>
-
-        {{!-- Hit Die --}}
-        <div class='subheader' style='width: 100%;'>
-            <h3>Hit Die: {{data.class.hit_dice}}</h3>
-        </div>
-
-        {{!-- Weapon Proficiencies --}}
-        <div style='text-align: left; width: 100%'>
-            <h3 class='subheader' style='margin-bottom: 10px'>Weapon Proficiencies:</h3>
-            <ul class='general-text'>
-                {{#each data.class.data.weapon_prof}}
-                <li>{{this}}</li>
-                {{/each}}
-            </ul>
-        </div>
-
-        {{!-- Armor Proficiencies --}}
-        <div style='text-align: left; width:100%'>
-            <h3 class='subheader' style='margin-bottom: 10px'>Armor Proficiencies:</h3>
-            <ul class='general-text'>
-                {{#each data.class.data.armor_prof}}
-                <li>{{this}}</li>
-                {{/each}}
-            </ul>
-        </div>
-
-        <hr class='section-break'>
-
-        {{!-- Choose Skills --}}
-        <div style='text-align: left; width:100%'>
-            <h3 class='header' style='margin-bottom: 10px'>Choose {{data.class.data.num_skills}} skills:</h3>
-            <ul class='general-text' style="list-style: none;">
-                {{#each data.class.data.skills}}
-                <li>
-                    <input type='checkbox' id='{{this}}' name='skill' value='{{this}}'>
-                    <label for='{{this}}'>{{this}}</label>
-                </li>
-                {{/each}}
-            </ul>
-        </div>
-
-        <hr class='section-break'>
-
-        {{!-- Class Features --}}
-        <div class='flex-item'>
-            <h3 class='header' style='margin-bottom: 10px'>Class Features:</h3>
-            <ul class='subheader' style='list-style: none;'>
-                {{#each data.class.feats}}
-                <li class='feat-entry tooltip'>
-                    <img src='{{this.img}}' class='feat-icon'>
-                    <span style='margin: auto'>{{this.name}}</span>
-                    <span class='tooltiptext'>{{stripHTML this.data.description.value}}</span> 
-                </li>
-                {{/each}}
-            </ul>
-        </div>
-
-        <hr class='section-break'>
-
-        {{!-- Starting Equipment--}}
-        <div style='text-align: left; width:100%'>
-            <h3 class='header' style='margin-bottom: 10px'>Starting Equipment:</h3>
-            <ul class='general-text'>
-                {{#each data.class.data.equipment}}
-                <li>{{this}}</li>
-                {{/each}}
-            </ul>
-        </div>
-
+            <div class='fill flex-column'>
+                <div class='info-pane'>
+                    <iframe class='fill darken' src='{{data.class.template}}'></iframe>
+                </div>
+            </div>
         {{/if}}
     </div>
-
-    {{#if data.class.name}}
-    {{!-- Info Pane --}}
-    <div class='info-pane'>
-        <iframe class='fill' src='{{data.class.template}}'></iframe>
-    </div>
-    {{/if}}
 </div>
