--- a/hero-conjurer/templates/spells.html
+++ b/hero-conjurer/templates/spells.html
@@ -1,96 +1,110 @@
-<div class='spells-tab fill' style='position: relative;'>
+<div id='spells-tab' class='fill flex-tab'>
 
     {{#if data.class.name}}
         {{#if (canCastSpells data.class.caster_type) }}
-        <h1 style='text-align: center;'>Choose a spell level, then drag spells to/from your spellbook.</h1>
+            <div class='flex-column'>
+                <h1 class='title'>Choose a spell level, then drag spells to/from your spellbook.</h1>
 
-        <nav class='subtabs' data-group="spells">
-            <a hidden class='item spells active' data-tab='spells'></a>
-            <a class='subtablinks item spells-cantrip' data-tab='spells-cantrip'>0</a>
-            <a class='subtablinks item spells-first' data-tab='spells-first'>I</a>
-            <a class='subtablinks item spells-second' data-tab='spells-second'>II</a>
-            <a class='subtablinks item spells-third' data-tab='spells-third'>III</a>
-            <a class='subtablinks item spells-fourth' data-tab='spells-fourth'>IV</a>
-            <a class='subtablinks item spells-fifth' data-tab='spells-fifth'>V</a>
-            <a class='subtablinks item spells-sixth' data-tab='spells-sixth'>VI</a>
-            <a class='subtablinks item spells-seventh' data-tab='spells-seventh'>VII</a>
-            <a class='subtablinks item spells-eighth' data-tab='spells-eighth'>VIII</a>
-            <a class='subtablinks item spells-ninth' data-tab='spells-ninth'>IX</a>
+                {{!-- Spell Level Tabs --}}
+                <div class='flex-row'>
+                    <div class='subtabs-container'>
+                        <nav class='subtabs flex-column' data-group="spells">
+                            <a hidden class='item spells active' data-tab='spells'></a>
+                            <a class='subtablinks item spells-cantrip' data-tab='spells-cantrip'>0</a>
+                            <a class='subtablinks item spells-first' data-tab='spells-first'>I</a>
+                            <a class='subtablinks item spells-second' data-tab='spells-second'>II</a>
+                            <a class='subtablinks item spells-third' data-tab='spells-third'>III</a>
+                            <a class='subtablinks item spells-fourth' data-tab='spells-fourth'>IV</a>
+                            <a class='subtablinks item spells-fifth' data-tab='spells-fifth'>V</a>
+                            <a class='subtablinks item spells-sixth' data-tab='spells-sixth'>VI</a>
+                            <a class='subtablinks item spells-seventh' data-tab='spells-seventh'>VII</a>
+                            <a class='subtablinks item spells-eighth' data-tab='spells-eighth'>VIII</a>
+                            <a class='subtablinks item spells-ninth' data-tab='spells-ninth'>IX</a>
+                        </nav>
+                    </div>
 
-        </nav>
+                    {{!-- Spell Entries --}}
+                    <div class='spell-pane'>
+                        <section class='subcontent'>
 
-        <section class='subcontent fill'>
+                            {{!-- Spells Tab --}}
+                            <div class='tab fill' data-tab='spells' data-group="spells">
+                            </div>
 
-            {{!-- Spells Tab --}}
-            <div class='tab fill' data-tab='spells' data-group="spells">
+                            <div class='tab fill' data-tab='spells-cantrip' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-cantrip.html"}}
+                            </div>
+
+                            <div class='tab fill' data-tab='spells-first' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-first.html"}}
+                            </div>
+
+                            <div class='tab fill' data-tab='spells-second' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-second.html"}}
+                            </div>
+
+                            <div class='tab fill' data-tab='spells-third' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-third.html"}}
+                            </div>
+
+                            <div class='tab fill' data-tab='spells-fourth' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-fourth.html"}}
+                            </div>
+
+                            <div class='tab fill' data-tab='spells-fifth' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-fifth.html"}}
+                            </div>
+
+                            <div class='tab fill' data-tab='spells-sixth' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-sixth.html"}}
+                            </div>
+
+                            <div class='tab fill' data-tab='spells-seventh' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-seventh.html"}}
+                            </div>
+
+                            <div class='tab fill' data-tab='spells-eighth' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-eighth.html"}}
+                            </div>
+
+                            <div class='tab fill' data-tab='spells-ninth' data-group="spells">
+                                {{> "modules/hero-conjurer/templates/parts/spells/spells-ninth.html"}}
+                            </div>
+                        </section>
+                    </div>
+
+                    {{!-- Spellbook --}}
+                    <div class='spellbook droppable-pane darken'>
+                        <div class='flex-column'>
+                            <h3 class='header'>Spellbook</h3>
+                            <hr class='section-break' style='width: 50%; margin: auto;'>
+                            <div class='flex-row' style='width: 50%; margin: auto;'>
+                                <span class='general-text' style='margin: 2.5% auto;'>Cantrips:
+                                    {{countLevels data.spells.levels "Cantrip"}}/{{data.class.num_spells.[0]}}</span>
+                                <span class='general-text' style='margin: 2.5% auto;'>1st Level:
+                                    {{countLevels data.spells.levels "1st Level"}}/{{data.class.num_spells.[1]}}</span>
+                            </div>
+                        </div>
+                        {{#each data.spells.spells}}
+                            <div class='spell-recorded drag-remove draggable' name='spell' id='{{this.name}}'>
+                                <img class='spell-recorded-icon' src='{{this.img}}'>
+                                <span class='spell-recorded-info' name='name'>{{this.name}}</span>
+                                <span class='spell-recorded-info'
+                                    name='level'>{{lookup ../data.spells.levels @index}}</span>
+                            </div>
+                        {{/each}}
+                    </div>
+                </div>
             </div>
-
-            <div class='tab fill' data-tab='spells-cantrip' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-cantrip.html"}}
-            </div>
-
-            <div class='tab fill' data-tab='spells-first' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-first.html"}}
-            </div>
-
-            <div class='tab fill' data-tab='spells-second' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-second.html"}}
-            </div>
-
-            <div class='tab fill' data-tab='spells-third' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-third.html"}}
-            </div>
-
-            <div class='tab fill' data-tab='spells-fourth' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-fourth.html"}}
-            </div>
-
-            <div class='tab fill' data-tab='spells-fifth' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-fifth.html"}}
-            </div>
-
-            <div class='tab fill' data-tab='spells-sixth' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-sixth.html"}}
-            </div>
-
-            <div class='tab fill' data-tab='spells-seventh' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-seventh.html"}}
-            </div>
-
-            <div class='tab fill' data-tab='spells-eighth' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-eighth.html"}}
-            </div>
-
-            <div class='tab fill' data-tab='spells-ninth' data-group="spells">
-                {{> "modules/hero-conjurer/templates/parts/spells/spells-ninth.html"}}
-            </div>
-        </section>
-        {{!-- Spellbook --}}
-        <div class='spellbook droppable'>
-            <div style='text-align:center;'>
-                <h3 class='header'>Spellbook</h3>
-                <hr class='section-break' style='width: 50%; margin: auto;'>
-                <span class='subheader'>Cantrips: {{countLevels data.spells.levels "Cantrip"}}/{{data.class.num_spells.[0]}}</span>
-                <span class='subheader'>1st Level: {{countLevels data.spells.levels "1st Level"}}/{{data.class.num_spells.[1]}}</span>
-            </div>
-            {{#each data.spells.names}}
-            <div class='spell-recorded drag-remove'>
-                <img class='spell-recorded-icon' src='{{lookup ../data.spells.imgs @index}}'
-                    name='spells' id='{{this}}'>
-                <span class='spell-recorded-info' name='name'>{{this}}</span>
-                <span class='spell-recorded-info' name='level'>{{lookup ../data.spells.levels @index}}</span>
-            </div>
-            {{/each}}
-        </div>
         {{else}}
-            <div class='fill'>
-                <h1 style='text-align: center;'>This class cannot cast spells</h1>
+            <div class='fill flex-column'>
+                <h1 class='title'>This class cannot cast spells</h1>
             </div>
         {{/if}}
 
     {{else}}
-        <div class='fill'>
-            <h1 style='text-align: center;'>Choose a class first</h1>
+        <div class='fill flex-column'>
+            <h1 class='title'>Choose a class first</h1>
         </div>
     {{/if}}
 
